--- a/index.html
+++ b/index.html
@@ -1,2 +1,16 @@
-asdasdasd
-asdasdas
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>My first blog post</title>
+
+
+
+
+    </head>
+    <body>
+        <h1>My first blog post</h1>        
+    </body>
+
+
+
+</html>
